--- a/src/styleMenu.css
+++ b/src/styleMenu.css
@@ -1,79 +1,132 @@
 body {
-    max-width: 100vw;
-    margin: 0;
-    overflow-x: hidden;
-    font-family: "Inter", sans-serif;
-    scroll-behavior: smooth;
-    color: white;
-    background: black;
-  }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  .main {
-    min-height: 100vh;
-    width: 100vw;
-  }
-  
-div,
+  max-width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
+  font-family: "Inter", sans-serif;
+  scroll-behavior: smooth;
+  color: white;
+  background: black;
+  background: linear-gradient(0.17deg, #1a1b21 6.22%, #0c0c1b 139.21%);
+
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.main {
+  min-height: 100vh;
+  width: 100vw;
+}
+
+/* div,
 ul,
+h2,
 li,
+h1,
 p {
     border: red 2px solid;
 }
 
 nav {
     border: green 2px solid;
+} */
+
+.introduction {
+  margin-top: 14vh;
+  margin-bottom: 14vh;
+}
+
+.introduction h1 {
+  text-align: center;
+  font-size: 4.5vh;
+  color: #e79033;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  
+}
+
+.introduction p {
+  text-align: justify;
+  font-size: 2.45vh;
+  margin-top: 5vh;
+  margin-left: 18vw;
+  margin-right: 18vw;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 6vh;
+  margin-top: 6vh;
+  min-width: 40vw;
+  font-size: 3.7vh;
+  margin-left: 10vw;
+  margin-right: 10vw;
 }
 
 .mapping {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .details-menu {
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .details-menu h3 {
-    display: block;
-    margin-bottom: 0.75rem;
-    font-weight: 600;
-    font-size: 2.67vh;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  display: block;
+  margin-bottom: 0.75rem;
+  font-weight: 600;
+  font-size: 2.67vh;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.details-menu p {
-    color: rgb(148 163 184 / var(1));
-    margin-bottom: 1.25rem;
-    font-weight: 500;
-    font-size: 2.21vh;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
+.details-menu h3:hover {
+  color: #f9ba33;
 }
+
+
+.details-menu p {
+  color: rgb(148 163 184 / var(1));
+  margin-bottom: 1.25rem;
+  font-weight: 500;
+  font-size: 2.21vh;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 3;
+  color: #aaaaaa
+}
+
 .content-menu {
-    height: fit-content;
-    width: 300px;
-    background: transparent;
-    border-radius: 1rem;
-    overflow: hidden;
-    margin-bottom: 2.5rem;
-  }
-  
-  .content-menu img {
-    width: 300px;
-    height: 300px;
-  }
-  
+  height: fit-content;
+  width: 300px;
+  background: transparent;
+  border-radius: 1rem;
+  overflow: hidden;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  background-color: #242C30;
+  transition: transform 0.3s ease-in-out;
+}
+
+.content-menu:hover {
+  transform: scale(1.05);
+  color: #f9ba33;
+
+}
+
+.content-menu img {
+  width: 300px;
+  height: 300px;
+}
