--- a/src/styleRecipe.css
+++ b/src/styleRecipe.css
@@ -5,8 +5,8 @@ body {
     font-family: "Inter", sans-serif;
     scroll-behavior: smooth;
     color: white;
-    background: black;
-    background: linear-gradient(0.17deg, #1a1b21 6.22%, #0c0c1b 139.21%);
+    background: linear-gradient(to bottom right, #151515 6.22%, #151515 139.21%);
+
   
   }
   
