--- a/src/styleRecipe.css
+++ b/src/styleRecipe.css
@@ -1,26 +1,26 @@
 body {
-    max-width: 100vw;
-    margin: 0;
-    overflow-x: hidden;
-    font-family: "Inter", sans-serif;
-    scroll-behavior: smooth;
-    color: white;
-    background: linear-gradient(to bottom right, #151515 6.22%, #151515 139.21%);
+  max-width: 100vw;
+  margin: 0;
+  overflow-x: hidden;
+  font-family: "Inter", sans-serif;
+  scroll-behavior: smooth;
+  color: white;
+  background: linear-gradient(to bottom right, #151515 6.22%, #151515 139.21%);
 
-  
-  }
-  
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
-  
-  .main {
-    min-height: 100vh;
-    width: 100vw;
-  }
-  
-  /* div,
+
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.main {
+  min-height: 100vh;
+  width: 100vw;
+}
+
+/* div,
   ul,
   h2,
   li,
@@ -32,37 +32,99 @@ body {
       border: green 2px solid;
   }
   */
-  .title{
-    margin-top:12vh;
-    margin-bottom:3vh;
+.title {
+  margin-top: 12vh;
+  margin-bottom: 3vh;
+  text-align: center;
+  font-size: 4vh;
+}
+
+.detail-recipe {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.detail-recipe img {
+  padding: 2rem;
+  border-radius: 40px;
+  width: 400px;
+  height: 400px;
+}
+
+.content-recipe {
+  padding: 2rem;
+  font-size: 2.3vh;
+  /* margin-left: 200px; */
+  width: 50%;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 30px transparent;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #f5a046;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(0.17deg, #ff7b00 1.22%, #ffbb00 59.21%);
+}
+
+@media only screen and (max-width: 1255px) {
+  .content-recipe h3 {
+    font-size: 2.5vh;
     text-align: center;
   }
-  .detail-recipe{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .detail-recipe img{
-    padding:2rem ;
-    border-radius:40px;
-  }
-  .content-recipe{
-    padding:2rem ;
+
+  .content-recipe {
+    padding: 2rem;
     font-size: 2.3vh;
     /* margin-left: 200px; */
-    width: 50%;
+    width: 70vw;
+
   }
-  @media only screen and (max-width: 1255px) {
-    .content-recipe h3{
-      font-size:2.5vh;
-      text-align: center;
-    }
-    .content-recipe{
-      padding:2rem ;
-      font-size: 2.3vh;
-      /* margin-left: 200px; */
-      width: 70vw;
-  
-}}
+}
+
+@media only screen and (max-width: 415px) {
+  .content-recipe h3 {
+    font-size: 2.2vh;
+    text-align: center;
+  }
+
+  .content-recipe {
+    padding: 2rem;
+    font-size: 1.9vh;
+    /* margin-left: 200px; */
+    width: 70vw;
+  }
+
+  .detail-recipe img {
+    padding: 2rem;
+    border-radius: 40px;
+    width: 70vw;
+    height: 70vw;
+  }
+
+  .detail-recipe ul {
+    margin-bottom: 10vh;
+  }
+
+  .title {
+    margin-top: 12vh;
+    margin-bottom: 3vh;
+    font-size: 3vh;
+    text-align: center;
+  }
+}
