--- a/src/styleRecipe.css
+++ b/src/styleRecipe.css
@@ -82,8 +82,16 @@ a {
   background: linear-gradient(0.17deg, #ff7b00 1.22%, #ffbb00 59.21%);
 }
 
+.title {
+  color: #f5a046;
+}
+.content-recipe h3 {
+  color: #f5a046;
+  font-size: 2.9vh;
+}
 @media only screen and (max-width: 1255px) {
   .content-recipe h3 {
+    color: #f5a046;
     font-size: 2.5vh;
     text-align: center;
   }
@@ -99,6 +107,7 @@ a {
 
 @media only screen and (max-width: 415px) {
   .content-recipe h3 {
+    color: #f5a046;
     font-size: 2.2vh;
     text-align: center;
   }
