--- a/style/styleRecipe.css
+++ b/style/styleRecipe.css
@@ -30,7 +30,7 @@ a {
 
 .detail-recipe {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   width: 100%;
   justify-content: space-around;
   align-items: center;
@@ -44,10 +44,12 @@ a {
 }
 
 .content-recipe {
+  display: flex;
   padding: 2rem;
   font-size: 2.3vh;
   /* margin-left: 200px; */
   width: 50%;
+  flex-wrap: wrap;
 }
 
 ::-webkit-scrollbar {
@@ -90,7 +92,7 @@ a {
     font-size: 2.3vh;
     /* margin-left: 200px; */
     width: 70vw;
-
+    flex-wrap: wrap;
   }
 }
 
@@ -106,6 +108,7 @@ a {
     font-size: 1.9vh;
     /* margin-left: 200px; */
     width: 70vw;
+    flex-wrap: wrap;
   }
 
   .detail-recipe img {
